--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@
   width: 200px;
   height: 300px;
   padding: 5px;
+  margin: 10px;
 }
 
 .res-card:hover {
@@ -40,4 +41,23 @@
 
 .res-logo {
   width: 190px;
+}
+
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
+  justify-content: space-around;
+}
+
+.shimmer-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card {
+  width: 200px;
+  height: 400px;
+  background-color: #f0f0f0;
+  margin: 20px;
 }
