--- a/index.css
+++ b/index.css
@@ -1,83 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-}
-
-.logo {
-  width: 200px;
-}
-
-.nav-items {
-  padding: 0px 20px;
-}
-
-.nav-items > ul {
-  font-size: 24px;
-  display: flex;
-  list-style-type: none;
-}
-
-.nav-items > ul > li {
-  padding: 10px;
-  margin: 10px;
-}
-
-.res-card {
-  width: 200px;
-  height: 300px;
-  padding: 5px;
-  margin: 10px;
-}
-
-.res-card:hover {
-  border: 1px solid black;
-  cursor: pointer;
-}
-
-.search {
-  padding: 10px;
-}
-
-.res-logo {
-  width: 190px;
-}
-
-.res-container {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 5px;
-  justify-content: space-around;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmer-card {
-  width: 200px;
-  height: 400px;
-  background-color: #f0f0f0;
-  margin: 20px;
-}
-
-.login {
-  padding: 0 20px;
-  cursor: pointer;
-}
-
-.filter {
-  display: flex;
-  
-}
-
-.disable-link-style {
-  text-decoration: none;
-  color: black;
-}
-
-.user-card {
-  padding: 10px;
-  border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
